app/main/default/objects/sfLma__License__c/fields/Email_Datetime__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Email_Datetime__c</fullName>
        <formula>now()+0.00069</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Datetime</label>
        <type>DateTime</type>
    </fields>
</CustomObject>