app/main/default/objects/sfLma__License__c/fields/Send_Email_for_0_5__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Send_Email_for_0_5__c</fullName>
        <description>Field is used to send email for 0.5 hour pause</description>
        <formula>Now() + 0.02073</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Email for 0.5 hour</label>
        <type>DateTime</type>
    </fields>
</CustomObject>