app/main/default/objects/sfLma__License__c/fields/Status__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active Customer
Expired
Internal License</description>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>